# FundAnalysisHelper

./: .gitignore  README.md  main.py
backend/: .env.example  Dockerfile  config.yaml  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  reporter.py  tools.py
backend/app/agents/analysts/: fund.py  macro.py  manager.py  news.py  sector.py  sentiment.py  technical.py
backend/app/agents/debaters/: bear.py  bull.py  cio.py
backend/app/agents/prompts/: analysts.py  debaters.py  reporter.py
backend/app/api/: deps.py
backend/app/api/routes/: analysis.py  fund.py
backend/app/core/: config.py
backend/app/datasource/: __init__.py  akshare_adapter.py  base.py  cache.py  composite.py  tushare.py
backend/app/db/: client.py  collections.py
backend/app/graph/: state.py  workflow.py
backend/app/models/: analysis.py  fund.py  report.py
backend/app/services/: analysis.py
backend/tests/: conftest.py  test_agent_base.py  test_agent_tools.py  test_akshare_adapter.py  test_analysis_service.py  test_analysts.py  test_api_deps.py  test_base_agent_tools.py  test_composite_datasource.py  test_config.py  test_datasource_cache.py  test_db.py  test_debaters.py  test_graph_state.py  test_integration.py  test_models.py  test_prompts.py  test_reporter.py  test_routes_analysis.py  test_routes_fund.py  test_tushare.py  test_workflow.py
docs/superpowers/specs/: 2026-06-10-agent-tools-design.md
